koncan css pred začetkom php

--- a/pages/o-meni.html
+++ b/pages/o-meni.html
@@ -33,49 +33,46 @@
     </header>
     <main>
         <h1>O meni</h1>
-        <div class="header">
-          <b>The man | The Myth | The Legend</b>
-      </div>
       <div class="first">
           <p>Kristijan Krošelj</p>
           <p>Vpisna številka: 35200035</p>
       </div>
       <div class="slika1">
-          <img src="../images/kepa2.jpg" alt="">
+          <img src="../images/kepa2.jpg" alt="broken image" width="350" height="500">
       </div>
       <div class="second">
-          <p class="odstavek">Hello, I'm Kris, how y'all doing? adipisicing elit. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
+          <p class="lead">Hello, I'm Kris, how y'all doing? adipisicing elit. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
           Officia neque dolorem aliquid soluta culpa ut rem quidem, debitis alias iusto ipsum dicta reprehenderit autem odit, fugit saepe minus deserunt aperiam, corrupti cum. Corrupti quasi quo minima distinctio harum?</p>
-          <p class="odstavek">Yes, I like to climb mountains and those photos are taken by me. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
+          <p class="lead">Yes, I like to climb mountains and those photos are taken by me. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
           Officia neque dolorem aliquid soluta culpa ut rem quidem, debitis alias iusto ipsum dicta reprehenderit autem odit, fugit saepe minus deserunt aperiam, corrupti cum. Corrupti quasi quo minima distinctio harum?</p>
-          <p class="odstavek">I'm also a motorcycle rider. Currently on 2018 Yamaha MT09. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
+          <p class="lead">I'm also a motorcycle rider. Currently on 2018 Yamaha MT09. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
           Officia neque dolorem aliquid soluta culpa ut rem quidem, debitis alias iusto ipsum dicta reprehenderit autem odit, fugit saepe minus deserunt aperiam, corrupti cum. Corrupti quasi quo minima distinctio harum?</p>
-          <p class="odstavek">Starting out fresh with all of this... so this is going to be interesting. Cupiditate dolorem ut, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
+          <p class="lead">Starting out fresh with all of this... so this is going to be interesting. Cupiditate dolorem ut, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
           Officia neque dolorem aliquid soluta culpa ut rem quidem, debitis alias iusto ipsum dicta reprehenderit autem odit, fugit saepe minus deserunt aperiam, corrupti cum. Corrupti quasi quo minima distinctio harum?</p>
-          <p class="odstavek">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate dolorem ut reprehenderit eveniet nesciunt, dolor fuga accusamus earum inventore eius dolores ipsam quos rem animi. Minus illo odio quo asperiores.
           Officia neque dolorem aliquid soluta culpa ut rem quidem, debitis alias iusto ipsum dicta reprehenderit autem odit, fugit saepe minus deserunt aperiam, corrupti cum. Corrupti quasi quo minima distinctio harum?</p>
       </div>
-      <div class="povezave">
-          <h2>Najljubše povezave:</h2>
-          <ul>
-              <li><a href="https://www.iglusport.si/" target="_blank">iglusport.si</a></li>
-              <li><a href="https://www.24ur.com/" target="_blank">24ur.com</a></li>
-              <li><a href="https://www.reddit.com/" target="_blank">reddit.com</a></li>
-              <li><a href="https://vreme.arso.gov.si/plazovi" target="_blank">Arso - plazovi</a></li>
-              <li><a href="https://www.hribi.net/" target="_blank">hribi.net</a></li>
-          </ul>
-          <h2>Najljubši filmi</h2>
-          <ul>
-              <li>14 peaks</li>
-              <li>Everest</li>
-              <li>Nanga Parbat</li>
-              <li>Who am I</li>
-              <li>Joker</li>
-          </ul>
+      <div class="povezave">      
+              <ul class="list-group">
+                <h2>Najljubše povezave:</h2>
+                <li class="list-group-item"><a href="https://www.iglusport.si/" target="_blank">iglusport.si</a></li>
+                <li class="list-group-item"><a href="https://www.24ur.com/" target="_blank">24ur.com</a></li>
+                <li class="list-group-item"><a href="https://www.reddit.com/" target="_blank">reddit.com</a></li>
+                <li class="list-group-item"><a href="https://vreme.arso.gov.si/plazovi" target="_blank">Arso - plazovi</a></li>
+                <li class="list-group-item"><a href="https://www.hribi.net/" target="_blank">hribi.net</a></li>
+              </ul>
+              <ul class="list-group">
+                <h2>Najljubši filmi</h2>
+                <li class="list-group-item">14 peaks</li>
+                <li class="list-group-item">Everest</li>
+                <li class="list-group-item">Nanga Parbat</li>
+                <li class="list-group-item">Who am I</li>
+                <li class="list-group-item">Joker</li>
+              </ul>
       </div>
       <div>
           <h2 class="tabela"></h2>
-          <table>
+          <table class="table" id="specialTable">
               <tr>
                   <th>Fav mountains</th>
                   <th>Fav motorcycles</th>
@@ -113,9 +110,14 @@
               </tr>
           </table>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="footer">
+        <ul class="list-group">
+          <h5>Povezave:</h5>
+          <li class="list-group-item"><a href="index.html">Domov</a></li>
+          <li class="list-group-item"><a href="o-meni.html">o-meni</a></li>
+          <li class="list-group-item"><a href="kontakt.html">Kontakt</a></li>
+        </ul>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
