--- a/pages/index.html
+++ b/pages/index.html
@@ -252,8 +252,13 @@
             </div>
           </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+      <ul class="list-group">
+        <h5>Povezave:</h5>
+        <li class="list-group-item"><a href="index.html">Domov</a></li>
+        <li class="list-group-item"><a href="o-meni.html">o-meni</a></li>
+        <li class="list-group-item"><a href="kontakt.html">Kontakt</a></li>
+      </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
